src/styles/global.css
:root {
  
  --color-background: #0e0e0e;
  --color-surface: #1a1919;
  --color-surface-high: #262626;
  --color-primary: #ff8f70;
  --color-primary-container: #ff7852;
  --color-secondary: #fd8b00;
  --color-on-surface: #ffffff;
  --color-on-surface-variant: #adaaaa;
  --color-outline: #777575;
  --color-outline-variant: #494847;
  --color-error: #ff716c;

  --font-headline: 'Space Grotesk', sans-serif;
  --font-body: 'Inter', sans-serif;

  --spacing-base: 0.5rem;
}

